@@ -35,6 +35,8 @@ PostGIS 2.0.1
   - #1840, fix logic of when to compute # of tiles in raster2pgsql.
   - #1851, fix spatial_ref_system parameters for EPSG:3844
   - #1857, fix failure to detect endpoint mismatch in ST_AddEdge*Face* 
+  - #1865, data loss in postgis_restore.pl when data rows have leading
+           dashes.
 
 * Enhancements *
 
